# mtab_server

./: pyproject.toml  run.py
config/: LANGS_105.tsv  LANGS_SELECTED.tsv  LANGS_SPACY.tsv  NER_TAGS_SPACY.tsv  WD_IDENTIFIERS.tsv  WP_IGNORED_NS.tsv  config.py
mtab_server/resources/db/: db_rocks.old.py  db_rocks.py  db_wikidata.old.py  utils.py
mtab_server/utils/: benchmark.py  dbpedia_download.sh  downloader.py  io_worker.py
tests/: run_test_rocksdb.py  test_db.py  test_rocksdb.py
