[tool.poetry]
name = "mtab_server"
version = "0.1.0"
description = ""
authors = ["Phuc Nguyen <phucnt.ty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.1"
requests = "^2.28.0"
lbry-rocksdb = "^0.8.2"
numpy = "^1.23.0"
ujson = "^5.3.0"
pyroaring = "^0.3.3"
lz4 = "^4.0.1"
msgpack = "^1.0.4"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
